<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zhihaofans.texttext.SettingActivity"
    tools:showIn="@layout/activity_setting">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView_temp"
        android:visibility="invisible" />

    <TextView
        android:text="@string/aboutapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/textView2"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <TextView
        android:text="@string/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4" />

    <Button
        android:text="@string/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_github"
        android:layout_alignBaseline="@+id/button_github_p"
        android:layout_alignBottom="@+id/button_github_p"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_marginTop="14dp"
        android:textSize="45sp"
        android:layout_below="@+id/textView_temp"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/ProjectLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_github_p"
        android:layout_marginBottom="13dp"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/UpdateLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignBaseline="@+id/button_github_p"
        android:layout_alignBottom="@+id/button_github_p"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:text="@string/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3" />

</RelativeLayout>
