<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.zhihaofans.texttext.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_input"
        android:gravity="start"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/textView_temp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_temp"
        android:visibility="invisible"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_output"
        android:selectAllOnFocus="true"
        android:gravity="start"
        android:focusable="false"
        android:layout_below="@+id/editText_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <Button
        android:text="@string/encode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_encode"
        android:layout_below="@+id/spinner_type"
        android:layout_alignLeft="@+id/button_copy"
        android:layout_alignStart="@+id/button_copy"
        android:layout_marginTop="49dp" />

    <TextView
        android:text="@string/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginBottom="21dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:textAlignment="viewStart"
        android:layout_alignBottom="@+id/spinner_type"
        android:layout_alignLeft="@+id/spinner_type"
        android:layout_alignStart="@+id/spinner_type" />

    <Button
        android:text="@string/paste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_paste"
        tools:ignore="RelativeOverlap"
        android:layout_alignBaseline="@+id/button_delall"
        android:layout_alignBottom="@+id/button_delall"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/decode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_decode"
        android:layout_alignBaseline="@+id/button_encode"
        android:layout_alignBottom="@+id/button_encode"
        android:layout_alignLeft="@+id/button_paste"
        android:layout_alignStart="@+id/button_paste" />

    <Button
        android:text="@string/poi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_poi"
        android:layout_alignBaseline="@+id/button_decode"
        android:layout_alignBottom="@+id/button_decode"
        android:layout_toRightOf="@+id/button_paste"
        android:layout_toEndOf="@+id/button_paste" />

    <Button
        android:text="@string/delall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_delall"
        android:layout_alignBaseline="@+id/button_copy"
        android:layout_alignBottom="@+id/button_copy"
        android:layout_toRightOf="@+id/button_paste"
        android:layout_toEndOf="@+id/button_paste" />

    <Button
        android:text="@string/copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_copy"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/button_encode"
        android:layout_toLeftOf="@+id/button_paste"
        android:layout_toStartOf="@+id/button_paste" />

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/spinner_type"
        android:entries="@array/TextType"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button_encode"
        android:layout_alignStart="@+id/button_encode" />

    <TextView
        android:text="@string/oldstr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_temp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/transformed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7" />

</RelativeLayout>
